k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class:  nginx #create ingress controller based on nginx
    nginx.ingress.kubernetes.io/rewrite-target: / #remove /api from server
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: service-cluster-ip-service
              servicePort: 5000
